base-infra/dev/vnet-001/app/app.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: default
spec:
  rules:
    - host: test.example.com # just and example domain, replace with your own domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-ui-svc
                port:
                  number: 80
  ingressClassName: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: chat-ui-svc
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
  selector:
    app: chat-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-ui
  namespace: default
  labels:
    app: chat-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-ui
  template:
    metadata:
      labels:
        app: chat-ui
    spec:
      containers:
        - name: chat-ui
          image: ghcr.io/huggingface/chat-ui-db:sha-128e0b7
          ports:
            - containerPort: 80
          # resources:
          #   requests:
          #     memory: "10Gi"
          #     cpu: "2"
          #   limits:
          #     memory: "16Gi"
          #     cpu: "2"
          volumeMounts:
            - mountPath: /db
              name: db-storage
              readOnly: false
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: modeldata-claim
